--- a/main.css
+++ b/main.css
@@ -1,22 +1,138 @@
-p {
-    font-family: "Mercury SSm A", "Mercury SSm B", Georgia, serif;
-    Font-size: "100px";
+* {
+    box-sizing: border-box;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial;
+    weight: 400;
+    max-width: 800px;
 }
 
-.quadrado {
-    height: 50px;
-    border: 15px solid #042f2d;
-    width: 50%;
-    background-color: rgba(179, 214, 212, 0.1);
+header {
+  background-color: #DEDEDE;
+  height: 67px;
+  color: #FAFAFA;
+
+}
+.contenedor {
+  display: inline-flex;
+  text-align: right;
 }
 
-.Img {
-    height: 10px;
-    width: 10px;
-    background-color: rgba(179, 214, 212, 0.1); 
+a {
+  text-decoration: none;
+  color: #0a0a0a;
 }
 
-.Img {
-    float: left;
-    width: 200px;
+.menuinicial {
+  width: auto;
+  max-width: 100%;
+  height: 17px;
+  font-weight: 400; 
+  color: #FAFAFA;
 }
+
+.listas {
+  list-style: none;
+  display: inline-block;
+  text-align: right;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+  opacity: 1;
+  word-spacing: normal;
+  right: 503px;
+
+}
+
+li {
+  display: inline;
+  text-transform: uppercase;
+ 
+}
+
+.miniimg {  
+  top: 14px;
+  width: 40px;
+  height: 40px;
+
+}
+
+.miniimg_ {
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  word-wrap: normal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 9px;
+  background-color: #d3d2d2;
+  border-radius: 50%;
+}
+
+.img_por {
+  width: auto;
+  height: 150px;
+  background-color: #f9a3eb;
+} 
+
+.nome {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  margin-top: 10px; 
+  width: 100%;
+
+}
+
+h2 {
+  top: 380px;
+  left: 848px;
+  width: 422px;
+  height: 73px;
+  text-align: right;
+  font: normal normal bold 55px/73px Segoe UI;
+  letter-spacing: 0px;
+  color: #F668DE;
+  opacity: 1;
+}
+
+.nome {
+  display:flex;
+
+}
+
+.img {
+  border: 1px solid #707070;
+  opacity: 1;
+  top: 185px;
+  left: 593px;
+  width: 183px;
+  height: 184px;
+}
+
+.img_im {
+    width: 260px;
+    height: 260px;
+    border-radius: 50%;
+    float:unset;
+}
+
+.historico {
+  background-color: #DEDEDE;
+  width: 100%;
+  height: 353px;
+}
+
+.h3 {
+  top: 973px;
+  left: 554px;
+  width: 230px;
+  height: 25px;
+  text-align: center;
+  letter-spacing: 0px;
+  color: #707070;
+  opacity: 1;
+  font: normal normal bold 21px/34px Segoe UI;
+  overflow: hidden;
+}
+
+
+
